tests/machine/x/hs/order_by_map.error

/workspace/mochi/tests/machine/x/hs/order_by_map.hs:99:6: error:
    parse error on input ‘=’
   |
99 | data = [Map.fromList [("a", 1), ("b", 2)], Map.fromList [("a", 1), ("b", 1)], Map.fromList [("a", 0), ("b", 5)]]
   |      ^


Context around line 99:
   97| 
   98| 
   99| data = [Map.fromList [("a", 1), ("b", 2)], Map.fromList [("a", 1), ("b", 1)], Map.fromList [("a", 0), ("b", 5)]]
  100| 
  101| sorted = map snd (List.sortOn fst [ ( Map.fromList [("a", VString (fromMaybe (error "missing") (Map.lookup "a" (x)))), ("b", VString (fromMaybe (error "missing") (Map.lookup "b" (x))))], x ) | x <- data ])
